--- a/AnaliseMsyt.ipynb
+++ b/AnaliseMsyt.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "source": [
         "Lucas Laia Manentti - rm 97709 ||\n",
-        "Lucas Moreno - sala: 1ESA (desculpa professor esqueci de pegar o rm com ele e ta meio em cima da hora)"
+        "Lucas Moreno - sala: 2ESA"
       ],
       "metadata": {
         "id": "CSFDVFotSx2i"
