--- a/AnaliseMsyt.ipynb
+++ b/AnaliseMsyt.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Lucas Laia Manentti - rm 97709 ||\n",
-        "Lucas Moreno - sala: 2ESA"
+        "Lucas Laia Manentti - rm 97709 \n",
+        "Lucas Moreno Matheus - rm 97158"
       ],
       "metadata": {
         "id": "CSFDVFotSx2i"
